--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Healing tracker.",
   "main": "index.js",
   "scripts": {
+    "devStart": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,11 +24,13 @@
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-mysql-session": "^2.1.4",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "moment": "^2.27.0",
     "mysql2": "^2.1.0",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.3.5"
