--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.3.5"
   }
