google login implemented

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 
 
+GOOGLE_CLIENT_ID=72178597270-o92u0n0jvrqg826jdosghrncnakpcb59.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=xWiXDDDnaGw4BIZSswi6t2I1
+
+
+WHITELIST =['http://localhost:3000','http://localhost:3001']
