--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+GOOGLE_CLIENT_ID = 833667121511-bfhhs616kln3bucu245btkd9l5qvr2c6.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET =-AWqWKtmKuZr1y-S-AL9aplz
 
-
+WHITELIST = ['http://localhost:3000', 'http://localhost:3001']
